# DataReporter

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/2026_06/06_12_UserName/sampleName/sampleName_saxs/: EPON826_0049.hdf  EPON826_1_0050.hdf  EPON826_2_0051.hdf  TapeBlank_0048.hdf
data/2026_06/06_12_UserName/sampleName/sampleName_usaxs/: EPON826_0049.h5  EPON826_1_0050.h5  EPON826_2_0051.h5  TapeBlank_0048.h5
data/2026_06/06_12_UserName/sampleName/sampleName_usaxs_merged/: EPON826_0049_merged.h5  EPON826_1_0050_merged.h5  EPON826_2_0051_merged.h5
data/2026_06/06_12_UserName/sampleName/sampleName_waxs/: EPON826_0049.hdf  EPON826_1_0050.hdf  EPON826_2_0051.hdf  (+1 more)
docs/: architecture.md  index.md
src/datareporter/: __init__.py  __main__.py  api.py  cli.py  config.py
src/datareporter/core/: __init__.py  grouping.py  model.py  nexus.py  nexus_reader.py  pipeline.py  report_orchestrator.py  reporter.py  scanner.py
src/datareporter/gui/: __init__.py  main_window.py  report_options.py  settings.py
src/datareporter/io/: csv_writer.py  image_cache.py  image_writer.py  obsidian_writer.py  pdf_writer.py  report_writer.py
src/datareporter/render/: __init__.py  parallel.py  plots.py
src/datareporter/writers/: __init__.py  ascii_writer.py  md_writer.py  pdf_writer.py
tests/: conftest.py  test_csv_writer.py  test_grouping.py  test_nexus.py  test_obsidian_writer.py  test_orchestrator.py  test_pdf_writer.py  test_pipeline.py  test_scanner.py  test_writers.py
