[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "datareporter"
version = "0.1.0"
description = "Nexus HDF5 data inspection and reporting toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DataReporter Authors", email = "example@example.com"},
]
keywords = ["nexus", "hdf5", "scientific", "reporting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "PyQt6>=6.5",
]


[project.optional-dependencies]
pdf = ["reportlab>=4.0"]
md = ["markdown>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]


[project.scripts]
datareporter = "datareporter.__main__:main"


[project.gui-scripts]
datareporter-gui = "datareporter.gui.main_window:launch"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-dir]
"" = "src"


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 100


[tool.black]
line-length = 100
